# ThePromptReportRAG

./: .coverage  .dockerignore  .env.example  .env.template  .flake8  .gitignore  Dockerfile  Dockerfile.production  EnhancedPrompt.py  LICENSE  PromptReportKnowledgeBase.py  README.md  advanced_rag.py  api.py  coverage.xml  deployment_status.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  streamlit_app.py
.github/status/: latest_deployment_status.md  status.yml
.github/workflows/: ci-cd.yml  dependency-update.yml  deployment-status.yml  docker-publish.yml  environment-management.yml  health-check.yml  release-management.yml  streamlit-deploy.yml  test-automation.yml
.streamlit/: config.toml  secrets.toml.example
docs/: COMPLETE_CI_CD_OPTIMIZATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DOCKER_BUILD_COMPLETE_FIX.md  DOCKER_BUILD_TEST_FIX.md  DOCKER_CONTAINER_STARTUP_FIX.md  DOCKER_GUIDE.md  DOCKER_IMAGE_CASE_FIX.md  FIXES_APPLIED.md  FLEXIBLE_LINTING_FIX.md  FORMAT_CODE_SCRIPT_FIX.md  GITHUB_ACTIONS_SETUP.md  HEALTH_CHECK_FIX.md  MIGRATION_SUMMARY.md  NON_FAST_FORWARD_FIX.md  OLLAMA_CLEANUP_COMPLETE.md  PERMISSIONS_FIX.md  PYTHON_LINTING_FIX.md  README_backup.md  README_simplified.md  REQUIREMENTS_OPTIMIZATION.md  SECRETS_SETUP.md  STREAMLIT_DEPLOYMENT_FIX.md  STREAMLIT_FIX.md  TROUBLESHOOTING.md  WORKFLOW_IMPROVEMENTS.md
knowledge_base_vectors/: metadata.pkl
scripts/: format_code.bat  format_code.py  generate_api_docs.py  generate_static_content.py
tests/: comprehensive_test_enhanced_prompts.py  focused_safety_test_suite.py  quick_test.py  safety_analysis_improved.py  test_advanced_rag.py  test_api.py  test_basic.py  test_integration.py
